estructurando mi archivo css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,133 +1,344 @@
-* {
-    padding: 0;
-    margin: 0;
-  }
-  *, :after, :before {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;}
 
-  body {
-    padding: 50px 0;
-    background-color: #fff3ec;
-    font-family: OpenSans-Light,Tahoma,Helvetica Neue,Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    line-height: 1.42857;
-    color: #333;
-    margin: 0;
-}
-@media (max-width: 320px) {
-    .content { font-size: 2em; }
- }
-.fade-out {
-    transition: visibility .15s linear,opacity .15s linear;
-    opacity: 1;
-    visibility: visible;
-}
-h1 {
-    font-size: 20px;
-    margin-bottom: 38px;
-    margin-top: 20px;
-    font-family: inherit;
-    font-weight: 500;
-    line-height: 1.1;
-    margin: .67em 0;
-}
-body, h1 {
-    color: #4b4668;
-}
-h1, header {
-    text-align: center;
-}
-header img {
-    max-width: 120px;
-    top: auto;
-    bottom: 0;
-    left: 50%;
-    display: block;
-    margin: auto;
-    transform: translateX(-50%);
-    border: 0;
-    padding: 20px 20px 90px;
+html {
+	text-rendering: optimizeLegibility !important;
+	-webkit-font-smoothing: antialiased !important;
 }
 
-
-.content .progress-container {
-    position: absolute;
-    top: -25px;
-    left: 0;
-    right: 0;
-}
-@media (min-width: 720px){
-       .content {padding: 60px 20px 90px;}
-}
-@media (min-width: 720px){
-    .content {padding: 60px 20px 90px;}
+body {
+	background-color: rgb(17, 17, 17);
+	font-family: 'Roboto Slab';
+	color: #fff;
 }
 
-
-.content {
-    background-color: #fff;
-    padding: 20px 20px 90px;
-    box-shadow: 4px 6px 38px hsla(0,100%,79%,.3);
-    max-width: 90%;
-    margin: 0 auto;
-    position: relative;
-    z-index: 2;
-}
-@media (min-width: 720px){
-    .btn-dark, .btn-huge {
-    margin: 0 30px 30px 0;
-    width: auto;}
+.wrapper {
+	height: 350px;
+	width: 700px;
+	margin: 40px auto;
 }
 
-.choices {
-    text-align: center;
+.quiz-box {
+	height: 100%;
+	border: 3px solid rgba(255, 255, 255, 1);
+	background-color: #000;
+	border-radius: 0px 10%;
+	box-shadow: 0px 0px 13px 2px rgb(0, 0, 0);
 }
 
-.btn-dark, .btn-xs {
-    background-color: #edecf0;
-    color: #4b4668;
-    font-size: 24px;
-    font-weight: 700;
-    margin: 0 0 15px;
-    border: 1px solid #4b4668;
-    padding: 6px 44px 6px 14px;
-    width: 100%;
-    text-align: left;
-    transition: background-color .3s linear,border-color .3s linear,color .3s linear;
-}
-.btn {
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: 400;
-    text-align: center;
-    vertical-align: middle;
-    touch-action: manipulation;
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
-    white-space: nowrap;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857;
-    border-radius: 4px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+.navigation-buttons {
+	text-align: center;
+	padding: 10px 0px;
+	float: right;
 }
 
-.share-icons {
-    position: absolute;
-    display: -webkit-inline-box;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%,-30px);
-   opacity: .3;
-}
-div {
-    display: block;
+.name-box {
+	text-align: center;
+	padding: 10%;
+	height: 100%;
 }
 
+.name-box span {
+	font-weight: 500;
+	font-size: 3em;
+}
+
+#name-input-box {
+	height: 45px;
+	padding: 0;
+	margin-top: 20px;
+	font: 400 3rem 'Roboto Slab';
+	letter-spacing: 0.025em;
+	border: none;
+	background: transparent;
+	text-align: center;
+	outline: none;
+	border-bottom: solid thin rgba(238, 238, 238, 0.12);
+}
+
+button {
+	border: none;
+	width: 100px;
+	height: 30px;
+	text-align: center;
+	border-radius: 0px 10px;
+	background: transparent;
+	outline: none;
+}
+
+button:hover {
+	cursor: pointer;
+	border: 2px solid #fff;
+	border-radius: 0px 10px;
+}
+
+button:disabled {
+	display: none;
+}
+
+#name-submit-button {
+	margin-top: 30px;
+}
+
+.quiz {
+	height: 100%;
+	padding: 10px;
+}
+
+#question h2 {
+	font-weight: 600;
+	padding: 20px;
+}
+
+.options {
+	height: 70%;
+	height: 100%;
+	padding-left: 20px;
+}
+
+.options label {
+	width: 49%;
+}
+
+
+/* Radio Button*/
+
+@-webkit-keyframes click-wave {
+	0% {
+		height: 40px;
+		width: 40px;
+		opacity: 0.35;
+		position: relative;
+		outline: none;
+	}
+	100% {
+		height: 200px;
+		width: 200px;
+		margin-left: -80px;
+		margin-top: -80px;
+		opacity: 0;
+		outline: none;
+	}
+}
+
+@-moz-keyframes click-wave {
+	0% {
+		height: 40px;
+		width: 40px;
+		opacity: 0.35;
+		position: relative;
+		outline: none;
+	}
+	100% {
+		height: 200px;
+		width: 200px;
+		margin-left: -80px;
+		margin-top: -80px;
+		opacity: 0;
+		outline: none;
+	}
+}
+
+@keyframes click-wave {
+	0% {
+		height: 40px;
+		width: 40px;
+		opacity: 0.35;
+		position: relative;
+		outline: none;
+	}
+	100% {
+		height: 200px;
+		width: 200px;
+		margin-left: -80px;
+		margin-top: -80px;
+		opacity: 0;
+		outline: none;
+	}
+}
+
+.option-input {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-ms-appearance: none;
+	-o-appearance: none;
+	appearance: none;
+	position: relative;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	height: 40px;
+	width: 40px;
+	top: 13px;
+	-webkit-transition: all 0.15s ease-out 0s;
+	-moz-transition: all 0.15s ease-out 0s;
+	transition: all 0.15s ease-out 0s;
+	border: none;
+	color: #fff;
+	cursor: pointer;
+	display: inline-block;
+	margin-right: 0.5rem;
+	outline: none;
+	position: relative;
+	z-index: 1000;
+}
+
+.option-input:hover {
+	background: #9faab7;
+	outline: none;
+}
+
+.option-input:checked {
+	background: black;
+}
+
+.option-input:checked::before {
+	height: 40px;
+	width: 40px;
+	position: absolute;
+	content: '\2713';
+	display: inline-block;
+	font-size: 26.66667px;
+	text-align: center;
+	line-height: 40px;
+}
+
+.option-input:checked::after {
+	-webkit-animation: click-wave 0.65s;
+	-moz-animation: click-wave 0.65s;
+	animation: click-wave 0.65s;
+	background: white;
+	content: '';
+	display: block;
+	position: relative;
+	z-index: 100;
+}
+
+.option-input.radio {
+	border-radius: 50%;
+	outline: none !important;
+	margin-right: 10px;
+	border: 2px solid #fff;
+}
+
+.option-input.radio::after {
+	border-radius: 50%;
+	outline: none;
+}
+
+label {
+	display: inline-block;
+	width: 50%;
+	float: left;
+	padding-left: 20px;
+	font-weight: 500;
+	font-size: 1.3em;
+}
+
+
+/*Pie chart style starts*/
+
+.score-detail,
+.chart {
+	display: inline-block;
+	width: 49%;
+	text-align: center;
+	vertical-align: top;
+	margin-top: 10px;
+}
+
+.easyPieChart {
+	position: relative;
+	text-align: center;
+}
+
+.easyPieChart canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.percentage,
+.label {
+	margin-bottom: 0.5em;
+	text-align: center;
+	font-weight: 100;
+}
+
+.percentage {
+	font-size: 17px;
+}
+
+sup {
+	top: -0.2em;
+	margin-left: 1px;
+}
+
+.ctrl {
+	position: absolute;
+	right: 10px;
+	top: 5px;
+	color: #c4cdcc;
+	word-spacing: 5px;
+}
+
+
+/*Pie chart style ends*/
+
+#result {
+	padding: 10px;
+	height: 100%;
+}
+
+#result .score-label h1 {
+	font-weight: 600;
+}
+
+#result .score-label h1 i {
+	margin-left: 10px;
+}
+
+#result .score-label h1,
+#result .message {
+	text-align: center;
+}
+
+#result .score-detail h3 {
+	margin-top: 19px;
+	padding-left: 15px;
+}
+
+#result-stats {
+	padding: 20px;
+}
+
+table,
+td,
+th {
+	padding: 10px;
+}
+
+table {
+	border-collapse: collapse;
+	width: 100%;
+}
+
+table td .grey {
+	color: rgba(255, 255, 255, 0.47);
+}
+
+th {
+	text-align: left;
+	font-size: 1.2em;
+}
+
+#result-stats .fa {
+	margin-right: 5px;
+}
+
+#result-stats .fa-check-circle {
+	color: #06ff00;
+}
+
+#result-stats .fa-times-circle {
+	color: #ff3d00;
+}
 
