--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,359 +1,114 @@
-
-html {
-	text-rendering: optimizeLegibility !important;
-	-webkit-font-smoothing: antialiased !important;
-}
-
-body {
-	background-color: rgb(244, 21, 108);
-	color: #878585;
-    font-family: OpenSans-Light,Tahoma,Helvetica Neue,Helvetica,Arial,sans-serif;
-    font-size: 14px;
-    line-height: 1.42857;
-}
-
-.quizTitle {
-    max-width: 120px;
-    position: absolute;
-    display: flex;
-    top: auto;
-	bottom: 0%;
-	margin: 0 auto;
-    left: 50%;
-    transform: translateX(-50%);
-   
-}
-
-
-.wrapper {
-	height: 350px;
-	width: 700px;
-	margin: 5% auto;
-}
-
-.quiz-box {
-	height: 100%;
-	border: 3px solid rgba(255, 255, 255, 1);
-	background-color: #000;
-	border-radius: 0px 10%;
-	box-shadow: 0px 0px 13px 2px rgb(0, 0, 0);
-}
-
-.navigation-buttons {
-	text-align: center;
-	padding: 10px 0px;
-	float: right;
-}
-
-.name-box {
-	text-align: center;
-	padding: 10%;
-	height: 100%;
-}
-
-.name-box span {
-	font-weight: 500;
-	font-size: 3em;
-}
-
-#name-input-box {
-	height: 45px;
+* {
 	padding: 0;
-	margin-top: 20px;
-	font: 400 3rem 'Roboto Slab';
-	letter-spacing: 0.025em;
-	border: none;
-	background: transparent;
+	margin: 0;
+  }
+  
+  body {
+	background-image: linear-gradient(135deg, #EFB3E1 0%, #F6E8F1 100%);
+	font-family: 'Lato', sans-serif;
+  }
+  
+  .quiz {
+	width: 80%;
+	margin: auto;
+	background-color: white;
+	box-sizing: border-box;
+	box-shadow: 0 0 2px black;
+	display: flex;
+	flex-direction: column;
+	padding: 4em 2em 4em;
+  }
+  
+  .stem {
+	font-size: 3em;
 	text-align: center;
-	outline: none;
-	border-bottom: solid thin rgba(238, 238, 238, 0.12);
-}
-
-button {
-	border: none;
-	width: 100px;
-	height: 30px;
-	text-align: center;
-	border-radius: 0px 10px;
-	background: transparent;
-	outline: none;
-}
-
-button:hover {
-	cursor: pointer;
-	border: 2px solid #fff;
-	border-radius: 0px 10px;
-}
-
-button:disabled {
-	display: none;
-}
-
-#name-submit-button {
-	margin-top: 30px;
-}
-
-.quiz {
-	height: 100%;
-	padding: 10px;
-}
-
-#question h2 {
-	font-weight: 600;
-	padding: 20px;
-}
-
-.options {
-	height: 70%;
-	height: 100%;
-	padding-left: 20px;
-}
-
-.options label {
-	width: 49%;
-}
-
-
-/* Radio Button*/
-
-@-webkit-keyframes click-wave {
-	0% {
-		height: 40px;
-		width: 40px;
-		opacity: 0.35;
-		position: relative;
-		outline: none;
-	}
-	100% {
-		height: 200px;
-		width: 200px;
-		margin-left: -80px;
-		margin-top: -80px;
-		opacity: 0;
-		outline: none;
-	}
-}
-
-@-moz-keyframes click-wave {
-	0% {
-		height: 40px;
-		width: 40px;
-		opacity: 0.35;
-		position: relative;
-		outline: none;
-	}
-	100% {
-		height: 200px;
-		width: 200px;
-		margin-left: -80px;
-		margin-top: -80px;
-		opacity: 0;
-		outline: none;
-	}
-}
-
-@keyframes click-wave {
-	0% {
-		height: 40px;
-		width: 40px;
-		opacity: 0.35;
-		position: relative;
-		outline: none;
-	}
-	100% {
-		height: 200px;
-		width: 200px;
-		margin-left: -80px;
-		margin-top: -80px;
-		opacity: 0;
-		outline: none;
-	}
-}
-
-.option-input {
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	-ms-appearance: none;
-	-o-appearance: none;
-	appearance: none;
-	position: relative;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	height: 40px;
-	width: 40px;
-	top: 13px;
-	-webkit-transition: all 0.15s ease-out 0s;
-	-moz-transition: all 0.15s ease-out 0s;
-	transition: all 0.15s ease-out 0s;
-	border: none;
-	color: #fff;
-	cursor: pointer;
-	display: inline-block;
-	margin-right: 0.5rem;
-	outline: none;
-	position: relative;
-	z-index: 1000;
-}
-
-.option-input:hover {
-	background: #9faab7;
-	outline: none;
-}
-
-.option-input:checked {
-	background: black;
-}
-
-.option-input:checked::before {
-	height: 40px;
-	width: 40px;
-	position: absolute;
-	content: '\2713';
-	display: inline-block;
-	font-size: 26.66667px;
-	text-align: center;
-	line-height: 40px;
-}
-
-.option-input:checked::after {
-	-webkit-animation: click-wave 0.65s;
-	-moz-animation: click-wave 0.65s;
-	animation: click-wave 0.65s;
-	background: white;
-	content: '';
-	display: block;
-	position: relative;
-	z-index: 100;
-}
-
-.option-input.radio {
-	border-radius: 50%;
-	outline: none !important;
-	margin-right: 10px;
-	border: 2px solid #fff;
-}
-
-.option-input.radio::after {
-	border-radius: 50%;
-	outline: none;
-}
-
-label {
-	display: inline-block;
-	width: 50%;
-	float: left;
-	padding-left: 20px;
-	font-weight: 500;
-	font-size: 1.3em;
-}
-
-
-/*Pie chart style starts*/
-
-.score-detail,
-.chart {
-	display: inline-block;
-	width: 49%;
-	text-align: center;
-	vertical-align: top;
-	margin-top: 10px;
-}
-
-.easyPieChart {
-	position: relative;
-	text-align: center;
-}
-
-.easyPieChart canvas {
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.percentage,
-.label {
-	margin-bottom: 0.5em;
-	text-align: center;
-	font-weight: 100;
-}
-
-.percentage {
-	font-size: 17px;
-}
-
-sup {
-	top: -0.2em;
-	margin-left: 1px;
-}
-
-.ctrl {
-	position: absolute;
-	right: 10px;
-	top: 5px;
-	color: #c4cdcc;
-	word-spacing: 5px;
-}
-
-
-/*Pie chart style ends*/
-
-#result {
-	padding: 10px;
-	height: 100%;
-}
-
-#result .score-label h1 {
-	font-weight: 600;
-}
-
-#result .score-label h1 i {
-	margin-left: 10px;
-}
-
-#result .score-label h1,
-#result .message {
-	text-align: center;
-}
-
-#result .score-detail h3 {
-	margin-top: 19px;
-	padding-left: 15px;
-}
-
-#result-stats {
-	padding: 20px;
-}
-
-table,
-td,
-th {
-	padding: 10px;
-}
-
-table {
-	border-collapse: collapse;
+	margin: 0 auto 1.2em;
+  }
+  
+  .choice-flexbox {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+  }
+  
+  .options {
+	width: 60%;
+	font-size: 1.5em;
+	color: white;
+	background-color: lightseagreen;
+	margin: 0.2em;
+	border-radius: 8px;
+	padding: 0.5em;
+  }
+  
+  .progress {
 	width: 100%;
-}
-
-table td .grey {
-	color: rgba(255, 255, 255, 0.47);
-}
-
-th {
-	text-align: left;
-	font-size: 1.2em;
-}
-
-#result-stats .fa {
-	margin-right: 5px;
-}
-
-#result-stats .fa-check-circle {
-	color: #06ff00;
-}
-
-#result-stats .fa-times-circle {
-	color: #ff3d00;
-}
-
+	padding-top: 2em;
+	margin-top: 2em;
+  }
+  
+  #progress {
+	width: 100%;
+  }
+  
+  .refresh {
+	font-size: 1.5em;
+	color: white;
+	background-color: lightseagreen;
+	margin: 0.2em;
+	border-radius: 8px;
+	margin-top: 1em;
+	padding: 0.5em;
+	width: 150px;
+	text-align: center;
+  }
+  
+  .refresh:hover {
+	transform: scale(1.02);
+	box-shadow: 0 3px 4px black, inset 0 0 4px grey;
+	cursor: pointer;
+  }
+  
+  .refresh:focus {
+	outline: none;
+  }
+  
+  @media only screen and (max-width: 1200px) {
+	.quiz {
+	  width: 100%;
+	}
+	.progress {
+	  width: 100%;
+	  padding-top: 1em;
+	  margin-top: 1em;
+	}
+  }
+  
+  @media only screen and (max-width: 550px) {
+	.quiz {
+	  padding: 0.5em 1em 0.5em;
+	}
+	.stem {
+	  font-size: 2em;
+	}
+	.options {
+	  font-size: 1.2em;
+	  width: 80%
+	}
+	.progress {
+	  width: 100%;
+	  padding-top: 0.7em;
+	  margin-top: 0.7em;
+	}
+  }
+  
+  @media only screen and (min-width: 1024px) {
+	.options:hover {
+	  transform: scale(1.02);
+	  box-shadow: 0 3px 4px black, inset 0 0 4px grey;
+	  cursor: pointer;
+	}
+	.options:focus {
+	  outline: none;
+	}
+  }
